--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ Halleluia Zeyohannes, UMass Lowell Computer Science,
 halleluia_zeyohannes@student.uml.edu
 Copyright (c) 2022 by Halleluia Zeyohannes. All rights reserved. May be freely
 copied or excerpted for educational purposes with credit to the author.
-updated by HZ on September 13, 2022 at 5:00AM
+updated by HZ on September 13, 2022 at 2:03PM
 
 I use this file to style my webpage. I set the background color and format 
 different elements on the page by linking this to index.html.
@@ -50,14 +50,27 @@ h3{
 
 /*
     for the p, figcaption, ul, and li elements, the default font sizes were too small 
-    to be easily read so I used the following two sections to take care of this.
+    to be easily read so I used the next few rules to take care of this. Additionally,
+    I wanted to center my figures so that there wouldn't be too much empty space 
+    on the right side of the figures.
 */
 p{
     font-size: 1.5em;
 }
 
-figcaption, ul, li{
+ul, li{
     font-size: 1.25em;
+}
+
+figure img, figure iframe{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+figcaption{
+    font-size: 1.25em;
+    text-align: center;
 }
 
 /*
@@ -79,6 +92,7 @@ figcaption, ul, li{
     width: 88px;
     height: 31px;
 }
+
 /*
     From here down, the selectors are all related to the table on my webpage. The default
     properties made the table more difficult to read and very cramped. Each selector has 
